--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --ftr-cnt-color: rgba(255, 255, 255, 0.6);
   --header-brd-line-color: #ececec;
   --card-progects-gap: 30px;
+  --svg-fill-color: #afb1b8;
 }
 /* border-boxing */
 html {
@@ -110,27 +111,39 @@ img {
 .contact {
   display: flex;
   margin-left: auto;
+  align-items: center;
 }
 .contact-header {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  padding: 32px 0;
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  align-items: center;
 }
-.contact .contact-item + .contact-item {
+.contact-item:not(:first-child) {
+  margin-left: 30px;
+}
+/* .contact .contact-item + .contact-item {
   margin-left: 50px;
-}
-/* .contact-item::before {
-  content: "";
-}
-.contact-item::after {
-  content: "";
 } */
+.header-icon {
+  display: inline-block;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.contact-header:hover,
+.contact-header:focus {
+  color: var(--accent-color);
+}
+/* .header-icon:hover,
+.header-icon:focus {
+  fill: var(--accent-color);
+} */
+
 /* footer contacts */
 .contact-footer,
 .footer-addr {
@@ -141,10 +154,11 @@ img {
   text-decoration: none;
 }
 /* actions with contacts */
-.contact-header:hover,
-.contact-header:focus,
+/* .contact-header:hover,
+.contact-header:focus, */
 .contact-footer:hover,
 .contact-footer:focus {
+  /* color: var(--accent-color); */
   color: var(--accent-color);
 }
 /* Buttons */
@@ -237,7 +251,7 @@ img {
   background: var(--first-section-color);
 }
 .hero {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
@@ -248,7 +262,7 @@ img {
   max-width: 1600px;
   min-height: 600px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
@@ -270,6 +284,7 @@ img {
   background-size: cover;
 }
 .hero-title {
+  display: block;
   margin-top: 0px;
   margin-bottom: 30px;
   color: var(--section-text-color);
@@ -282,6 +297,7 @@ img {
 }
 .preferences {
   display: flex;
+  justify-content: center;
 }
 .pref-item {
   padding: 0px;
@@ -290,6 +306,16 @@ img {
 }
 .preferences .pref-item:not(:last-child) {
   margin-right: 30px;
+}
+.pref-card {
+  display: flex;
+  justify-content: center;
+  width: 270px;
+  height: 120px;
+  align-items: center;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: var(--second-section-color);
 }
 .pursuit {
   padding-top: 0px;
@@ -371,8 +397,7 @@ img {
   margin-top: 0px;
 }
 .team {
-  padding-top: 30px;
-  /* padding-bottom: 30px; */
+  padding: 30px 32px;
 }
 .team-member {
   margin-top: 0px;
@@ -390,8 +415,24 @@ img {
 }
 .social {
   display: flex;
-  padding-top: 0px;
-  padding-bottom: 30px;
+  justify-content: space-between;
+  /* padding: 0;
+  margin: 0px; */
+}
+.social-page-link {
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  align-items: center;
+  background-color: transparent;
+  fill: var(--svg-fill-color);
+}
+.social-page-link:hover,
+.social-page-link:focus {
+  fill: var(--first-section-color);
+  background-color: var(--accent-color);
 }
 /*users*/
 .clients {
@@ -400,12 +441,44 @@ img {
 }
 .client-icons {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
+  align-items: center;
   padding-top: 0px;
   margin-bottom: 50px;
-  /* margin-left: auto;
-  margin-right: auto; */
-  /* width: 1170px; */
+}
+.client-content {
+  display: block;
+  align-items: center;
+}
+.client-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--svg-fill-color);
+  border-radius: 4px;
+  /* color: var(--main-text-color) */
+  /* color: var(--svg-fill-color); */
+  padding: 0px;
+  margin: 0;
+}
+.button-icon {
+  display: block;
+  fill: var(--svg-fill-color);
+}
+/* .sixth {
+  padding: 23px 65px 22.3px 64px;
+} */
+.client-button:hover,
+.client-button:focus {
+  border-color: var(--accent-color);
+  cursor: pointer;
+}
+.button-icon:hover,
+.button-icon:focus {
+  fill: var(--accent-color);
+  /* cursor: pointer; */
 }
 /*footer*/
 .footer {
